[rui] chore: pkg keywords

--- a/package.json
+++ b/package.json
@@ -13,7 +13,28 @@
     "README.md",
     "LICENSE"
   ],
-  "keywords": [],
+  "keywords": [
+    "promise",
+    "promises",
+    "promise-retry",
+    "promise-wrapper",
+    "async",
+    "async-await",
+    "await",
+    "await-to-js",
+    "await-to",
+    "await-error",
+    "await-to-done",
+    "await-done",
+    "to",
+    "into",
+    "retry",
+    "error-handler",
+    "error-handling",
+    "javascript",
+    "node",
+    "nodejs"
+  ],
   "author": "rui <https://github.com/yaooooooooo>",
   "license": "MIT",
   "homepage": "https://github.com/yaooooooooo/await-into#readme",
