--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "await-into",
   "version": "1.0.3",
-  "description": "",
+  "description": "Async/await wrapper for easy error handling in js",
   "main": "dist/index.cjs.js",
   "module": "dist/index.mjs.js",
   "scripts": {
