--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Async/await wrapper for easy error handling in js",
   "main": "dist/index.cjs.js",
   "module": "dist/index.mjs.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "prepublish": "npm version patch"
@@ -11,6 +12,7 @@
   "files": [
     "dist/",
     "README.md",
+    "index.d.ts",
     "LICENSE"
   ],
   "keywords": [
